# project2210132-233191

./: .gitignore  .gitmodules  README.md  readme.md  说明文档.docx
code/task_management/: Cargo.toml
code/task_management/src/: api.rs  lib.rs  processor.rs  task.rs
code/task_management/src/stack/: mod.rs  stack_pool.rs  task_stack.rs
code/task_management/src/task/: mod.rs  reg_context.rs  switch.rs  waker.rs
code/task_queues/: Cargo.toml
code/task_queues/src/: block_queue.rs  current.rs  lib.rs  scheduler.rs
code/task_queues/src/scheduler/: mod.rs  static_priority.rs
code/task_scheduler/: Cargo.toml
code/task_scheduler/src/: block_queue.rs  current.rs  lib.rs  scheduler.rs
code/task_switch/: Cargo.toml
code/task_switch/src/: lib.rs  processor.rs  stack_pool.rs  task_switch.rs  waker.rs
code/task_switch/src/taskctx/: kstack.rs  mod.rs  task.rs
code/task_switch/src/taskctx/arch/: aarch64.rs  riscv.rs  x86_64.rs
code/trap_handler/: Cargo.toml
code/trap_handler/src/: api.rs  entry.rs  handler.rs  lib.rs  timer.rs
doc/: moic_driver调研.md  中断处理模块设计.md  任务调度模块的接口及划分.md  比赛项目结构图.drawio  结合任务切换功能.md  通用任务调度模块项目调研.md  项目设计.md
