[package]
name = "task_scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }
percpu = { git = "https://github.com/Starry-OS/percpu" }

[features]
# 使用 [moic](https://github.com/ATS-INTC/moic) 调度
moic = []
# 对多处理器的支持
smp = [ "spinlock/smp" ]
# 若系统支持抢占，则需要启用该feature，同时也需按照 [kernel_guard依赖项](https://github.com/Starry-OS/kernel_guard) 的要求实现 `KernelGuardIf` 接口
premmpt = []